--- a/ToDoList_OriginalTemplate/src/ToDoList.WebApi/ToDoList.WebApi.csproj
+++ b/ToDoList_OriginalTemplate/src/ToDoList.WebApi/ToDoList.WebApi.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
 </Project>
